--- a/Survey/AndroidManifest.xml
+++ b/Survey/AndroidManifest.xml
@@ -9,20 +9,17 @@
 
     <uses-permission android:name="com.aware.READ_CONTEXT_DATA" />
     <uses-permission android:name="com.aware.WRITE_CONTEXT_DATA" />
+    <uses-permission android:name="android.permission.VIBRATE" />
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
-        
         <service
             android:name="Plugin"
             android:exported="true"
-            android:label="Indoor Levels" >
+            android:label="Survey" >
         </service>
-        
-        
     </application>
 
 </manifest>
