--- a/Survey/.project
+++ b/Survey/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Survey</name>
+	<name>Survey_v2.1</name>
 	<comment></comment>
 	<projects>
 	</projects>
