Updated to not show debug and added video.mp4

--- a/Survey/.project
+++ b/Survey/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Survey_v3.2n</name>
+	<name>Survey_v4.0</name>
 	<comment></comment>
 	<projects>
 	</projects>
